tests/calico_testcases/example_policies/testcase20-hostendpoint/testcase20-scheme.yaml
namespaceList: ../../example_podlist/ns_list_wdc.json
podList: ../../example_podlist/hep_and_wep.json


networkConfigList:
  - name: Eran_gnps
    networkPolicyList:
      - testcase20-0-gnps.yaml
      - testcase20-profiles.yaml
    expected_warnings: 1  # This warning is sort of false. It's because we can't reason about a mixture of pods and ips
                          # Nevertheless, the problematic policy allow-node-port-dnat is really redundant

  - name: np_1_globalEmpty_with_profiles
    networkPolicyList:
      - testcase20-1-empty-globalNetworkpolicy.yaml
      - testcase20-profiles.yaml
    expected_warnings: 0

  - name: np_2_outbound_hep_all_ep
    networkPolicyList:
      - testcase20-2-outbound-hep-all-ep.yaml
      - testcase20-profiles.yaml
    expected_warnings: 0

  - name: np_3_outbound_hep_to_wep
    networkPolicyList:
      - testcase20-3-outbound-hep-only-to-wep.yaml
      - testcase20-profiles.yaml
    expected_warnings: 0

  - name: np_4_outbound_all_namespaceSelector
    networkPolicyList:
      - testcase20-4-outbound-hep-all-namespaceselector.yaml
      - testcase20-profiles.yaml
    expected_warnings: 0

queries:
  - name: sanity_Eran_gnps
    sanity:
      - Eran_gnps
    expected: 2

# note that due to the profiles the empty np is not vacuous!!
  - name: sanity_np_1_globalEmpty_with_profiles
    sanity:
      - np_1_globalEmpty_with_profiles
    expected: 0

  - name: sanity_np_2_all_outbound_hep
    sanity:
      - np_2_outbound_hep_all_ep
    expected: 0

  - name: sanity_np_3_outbound_hep_to_wep
    sanity:
      - np_3_outbound_hep_to_wep
    expected: 0

  - name: sanity_np_4_outbound_all_namespaceSelector
    sanity:
      - np_4_outbound_all_namespaceSelector
    expected: 0

  - name: part_outbound_hep_subset_all_outbound
    twoWayContainment:
      - np_3_outbound_hep_to_wep
      - np_2_outbound_hep_all_ep
    expected: 2

  - name: selector_namespaceSelector_outbound_hep_subset_all_outbound
    twoWayContainment:
      - np_4_outbound_all_namespaceSelector
      - np_2_outbound_hep_all_ep
    expected: 2
